@@ -1,5 +1,9 @@
 2002-11-07  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
+	* Makefile.in (liboctinterp.$(LIBEXT)): Include $(XERBLA) here.
+	(octave.$(EXEEXT)): Not here.
+	(liboctinterp.$(SHLEXT)): Include $(PIC_XERBLA) here.
+
 	* main.c: Move decl for xerbla here from octave.cc.
 
 	* cutils.c (octave_vsnprintf): Use portable_snprintf to avoid
